--- a/_config.yml
+++ b/_config.yml
@@ -38,10 +38,10 @@ avatar: "/img/avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#202013" 
+navbar-col: "#F5F5F5"
 navbar-text-col: "#404040"
-navbar-children-col: "#202013"
-page-col: "#000000"
+navbar-children-col: "#F5F5F5"
+page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F5"
